deployment/dockerfiles/notebooks/kfp-user-namespace/ml-pipeline-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: auth-$(profile-name)
 namespace: kubeflow
spec:
 selector:
   matchLabels:
     app: ml-pipeline
 rules:
 - from:
   - source:
       principals: [$(sa)]
