deployment/dockerfiles/notebooks/kfp-user-namespace/networking-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: $(profile-name)
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
