deployment/dockerfiles/notebooks/kfp-user-namespace/notebooks-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: notebooks-authorization
  namespace: $(profile-name)
spec:
  action: ALLOW
  rules:
    - when:
        - key: source.namespace
          values:
            - $(profile-name)  
    - to:
      - operation:
          paths:
          - /*
